--- a/SS9/SS9_B2/SS9_B2.html
+++ b/SS9/SS9_B2/SS9_B2.html
@@ -1,21 +1,25 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="vi">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./SS9_B2.css">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Grid 8 Boxes</title>
+  <link rel="stylesheet" href="./SS9_B2.css">
 </head>
 <body>
-     <div class="container">
-        <div class="item">1</div>
-        <div class="item">2</div>
-        <div class="item">3</div>
-        <div class="item">4</div>
-        <div class="item">5</div>
-        <div class="item">7</div>
-        <div class="item">8</div>
+  <div class="wrap">
+    <div class="frame">
+      <div class="grid">
+        <div class="box"><span>1</span></div>
+        <div class="box"><span>2</span></div>
+        <div class="box"><span>3</span></div>
+        <div class="box"><span>4</span></div>
+        <div class="box"><span>5</span></div>
+        <div class="box"><span>6</span></div>
+        <div class="box"><span>7</span></div>
+        <div class="box"><span>8</span></div>
+      </div>
     </div>
-
+  </div>
 </body>
 </html>
