--- a/SS9/SS9_B3/SS9_B3.html
+++ b/SS9/SS9_B3/SS9_B3.html
@@ -7,15 +7,14 @@
     <link rel="stylesheet" href="./SS9_B3.css">
 </head>
 <body>
-     <div class="container">
-        <div class="item">1</div>
-        <div class="item">2</div>
-        <div class="item">3</div>
-        <div class="item">4</div>
-        <div class="item">5</div>
-        <div class="item">7</div>
-        <div class="item">8</div>
-    </div>
-
+    <section>
+        <div>1</div>
+        <div>2</div>
+        <div>3</div>
+        <div>4</div>
+        <div class="card">5</div>
+        <div>6</div>
+        <div>7</div>
+    </section>
 </body>
 </html>
