--- a/SS9/SS9_B4/SS9_B4.html
+++ b/SS9/SS9_B4/SS9_B4.html
@@ -4,14 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./SS9_B4.css">
+   <link rel="stylesheet" href="./SS9_B4.css">
 </head>
 <body>
-    <header>Header</header>
-    <main> 
-        <div class="sidebar">sidebar</div>
-        <div class="content">content</div>
+    <header>
+        <p>Header</p>
+    </header>
+    <main>
+        <section class="side-bar">Side Bar</section>
+        <section class="content">Content</section>
     </main>
-    <footer>footer</footer>
+    <footer>
+        <p>Footer</p>
+    </footer>
 </body>
 </html>
