--- a/SS9/SS9_B7/SS9_B7.html
+++ b/SS9/SS9_B7/SS9_B7.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>My Blog</h1>
+        <h1>MY BLOG</h1>
         <ul>
             <li><a href="">Home</a></li>
             <li><a href="">About</a></li>
@@ -17,21 +17,24 @@
         </ul>
     </header>
     <main>
-        <div class="container1">
-            <h3>Bài viết nổi bật</h3>
-            <h4>Tiêu đề bài viết chính</h4>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Non, ipsum, porro quia voluptatem illum quae repellat incidunt obcaecati blanditiis consequuntur vel voluptas minima dolorum! Consequuntur, quas recusandae? Odio, quaerat consequatur!</p>
+        <div class="content-1">
+            <h2>Bài viết nổi bật</h2>
+            <h3>Tiêu đề bài viết chính</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ut nulla eu lorem tincidunt tristique.</p>
             <a href="">Đọc thêm</a>
         </div>
-        <div class="container2">
-            <h3>Các bài viết khác</h3>
-            <h4>Bài viết 1</h4>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit...</p>
-            <h4>Bài viết 2</h4>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit...</p>
-            <h4>Bài viết 3</h4>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit...</p>
+        <div class="content-2">
+            <h2>Các bài viết khác</h2>
+            <h3>bài viết 1</h3>
+            <p>Lorem ipsum dolor sit amet...</p>
+            <h3>bài viết 2</h3>
+            <p>Lorem ipsum dolor sit amet...</p>
+            <h3>bài viết 3</h3>
+            <p>Lorem ipsum dolor sit amet...</p>
         </div>
     </main>
+    <footer>
+        <p>&copy; 2023 My Blog. All rights reserved.</p>
+    </footer>
 </body>
 </html>
