--- a/SS13/SS13_BT1/SS13_BT1.html
+++ b/SS13/SS13_BT1/SS13_BT1.html
@@ -1,282 +1,117 @@
 <!DOCTYPE html>
 <html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Services | Lalasia</title>
+  <link rel="stylesheet" href="./SS13_BT1.css"/>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+</head>
+<body>
 
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>EduPlatform</title>
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
-        <link rel="stylesheet" href="./SS13_BT1.css">
-    </head>
+<!-- HEADER -->
+<header class="header">
+  <div class="container header-inner">
+    <h1 class="logo">Lalasia</h1>
+    <nav class="nav">
+      <a href="#">Product</a>
+      <a href="#">Services</a>
+      <a href="#">Article</a>
+      <a href="#">About Us</a>
+    </nav>
+  </div>
+</header>
 
-    <body>
+<!-- HERO -->
+<section class="hero">
+  <div class="container">
+    <h2>Services</h2>
+    <p>The product crafted by talented crafter and using high quality material</p>
+    <img src="./picture/p1.jpg" alt="Service hero">
+  </div>
+</section>
 
-        <header>
-            <div class="container d-flex justify-content-between align-items-center">
-                <div class="icon d-flex align-items-center gap-2">
-                    <img src="./icon/SVG.svg" alt="">
-                    <p class="fw-bold fs-5 mb-0">EduPlatform</p>
-                </div>
+<!-- SERVICES LIST -->
+<section class="services">
+  <div class="container services-grid">
+    <div class="service">
+      <span>01</span>
+      <h3>Furniture</h3>
+      <p>At the ultimate smart home, you're met with technology before you even step through the front door.</p>
+    </div>
+    <div class="service">
+      <span>02</span>
+      <h3>Home Decoration</h3>
+      <p>Create a calm, stylish living space with premium decoration products.</p>
+    </div>
+    <div class="service">
+      <span>03</span>
+      <h3>Kitchen Cabinet</h3>
+      <p>Custom cabinets with premium material and modern design.</p>
+    </div>
+    <div class="service">
+      <span>04</span>
+      <h3>Interior Design</h3>
+      <p>We provide professional interior design services.</p>
+    </div>
+    <div class="service">
+      <span>05</span>
+      <h3>Exterior Design</h3>
+      <p>Enhance your building exterior with modern aesthetics.</p>
+    </div>
+    <div class="service">
+      <span>06</span>
+      <h3>Custom Furniture</h3>
+      <p>Tailored furniture designs made specifically for your space.</p>
+    </div>
+  </div>
+</section>
 
-                <ul class="d-flex gap-4 list-unstyled m-0">
-                    <li>Tính năng</li>
-                    <li>Giới thiệu</li>
-                    <li>Liên hệ</li>
-                    <li>Giá cả</li>
-                </ul>
+<!-- PROJECTS -->
+<section class="projects">
+  <div class="container">
+    <h2>Amazing project we’ve done before</h2>
+    <div class="project-grid">
+      <img src="./picture/p2.jpg" alt="">
+      <img src="./picture/p3.jpg" alt="">
+      <img src="./picture/p4.jpg" alt="">
+      <img src="./picture/p2.jpg" alt="">
+    </div>
+  </div>
+</section>
 
-                <button class="bg-primary border-0">Đăng nhập</button>
-            </div>
-        </header>
+<!-- CTA -->
+<section class="cta">
+  <div class="container cta-box">
+    <h2>Are you interested work with us?</h2>
+    <a href="#" class="btn">Let’s Talk</a>
+  </div>
+</section>
 
-        <main>
-            <div class="container-main-wrapper">
-                <div class="container-main">
+<!-- FOOTER -->
+<footer class="footer">
+  <div class="container footer-grid">
+    <div>
+      <h3>Lalasia</h3>
+      <p>Lalasia is a furniture store that brings elegance to your home.</p>
+    </div>
+    <div>
+      <h4>Product</h4>
+      <a href="#">New Arrivals</a>
+      <a href="#">Best Seller</a>
+    </div>
+    <div>
+      <h4>Services</h4>
+      <a href="#">Interior Design</a>
+      <a href="#">Exterior Design</a>
+    </div>
+    <div>
+      <h4>Follow Us</h4>
+      <a href="#">Instagram</a>
+      <a href="#">Twitter</a>
+    </div>
+  </div>
+</footer>
 
-                    <!-- TEXT -->
-                    <div class="text">
-                        <h3>
-                            Luyện tập cắt giao
-                            diện Figma như một
-                            chuyên gia</span>
-                        </h3>
-
-                        <p>Nâng cao kỹ năng thiết kế và phát triển web của bạn với các bài tập thực
-                            tế từ Figma. Học cách chuyển đổi thiết kế thành code HTML/CSS hoàn
-                            hảo.</p>
-
-                        <div class="button-flex d-flex gap-3 my-4">
-                            <button class="bg-primary border-0 text-white">
-                                Bắt đầu học ngay
-                                <img src="./icon/Vector.svg" alt="">
-                            </button>
-
-                            <button class="btn-light border">
-                                Xem demo
-                            </button>
-                        </div>
-
-                        <!-- Stats -->
-                        <div class="stats">
-                            <div class="stat-item">
-                                <strong>5000+</strong>
-                                <p>Sinh viên</p>
-                            </div>
-
-                            <div class="stat-item">
-                                <strong>200+</strong>
-                                <p>Bài tập</p>
-                            </div>
-
-                            <div class="stat-item">
-                                <strong>4.9/5</strong>
-                                <p>Đánh giá</p>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- IMAGE -->
-                    <div class="badge-card">
-                        <div class="badge-icon">
-                            <img src="./icde1/Overlay+Shadow.svg" alt="">
-                        </div>
-
-                        <div class="badge-text">
-                            <div class="icon-text">
-                                <img src="./icon/Background.svg" alt="">
-                            </div>
-                            <div class="text">
-                                <h4>Hoàn thành bài học</h4>
-                                <p>+50 Điểm kinh nghiệm</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </main>
-        <section class="features py-5">
-            <div class="container text-center">
-
-                <!-- Tag nhỏ -->
-                <div class="feature-tag mx-auto mb-3">Tính năng</div>
-
-                <!-- Tiêu đề -->
-                <h2 class="fw-bold mb-3">Mọi thứ bạn cần để trở thành chuyên gia</h2>
-
-                <!-- Mô tả -->
-                <p class="text-muted mb-5">
-                    Nền tảng học tập toàn diện với đầy đủ công cụ và tài nguyên giúp bạn thành thạo
-                    kỹ năng cắt giao diện Figma.
-                </p>
-
-                <!-- GRID 3 CỘT -->
-                <div class="row g-4">
-
-                    <!-- Item 1 -->
-                    <div class="col-lg-4 col-md-6">
-                        <div class="feature-card">
-                            <div class="icon-box">
-                                <img src="./icde1/SVG (1).svg" alt="">
-                            </div>
-                            <h5 class="fw-bold mt-3">Bài tập thực tế</h5>
-                            <p>Hơn 200 bài tập từ cơ bản đến nâng cao, được thiết kế bởi chuyên gia.</p>
-                        </div>
-                    </div>
-
-                    <!-- Item 2 -->
-                    <div class="col-lg-4 col-md-6">
-                        <div class="feature-card">
-                            <div class="icon-box">
-                                <img src="./icde1/SVG (6).svg" alt="">
-                            </div>
-                            <h5 class="fw-bold mt-3">Hướng dẫn chi tiết</h5>
-                            <p>Video hướng dẫn từng bước giúp bạn nắm rõ quy trình.</p>
-                        </div>
-                    </div>
-
-                    <!-- Item 3 -->
-                    <div class="col-lg-4 col-md-6">
-                        <div class="feature-card">
-                            <div class="icon-box">
-                                <img src="./icde1/SVG (3).svg" alt="">
-                            </div>
-                            <h5 class="fw-bold mt-3">Học tập linh hoạt</h5>
-                            <p>Học mọi lúc, mọi nơi trên mọi thiết bị.</p>
-                        </div>
-                    </div>
-
-                    <!-- Item 4 -->
-                    <div class="col-lg-4 col-md-6">
-                        <div class="feature-card">
-                            <div class="icon-box">
-                                <img src="./icde1/SVG (4).svg" alt="">
-                            </div>
-                            <h5 class="fw-bold mt-3">Cộng đồng hỗ trợ</h5>
-                            <p>Tham gia cộng đồng hơn 5,000 sinh viên và chia sẻ kiến thức.</p>
-                        </div>
-                    </div>
-
-                    <!-- Item 5 -->
-                    <div class="col-lg-4 col-md-6">
-                        <div class="feature-card">
-                            <div class="icon-box">
-                                <img src="./icde1/SVG (5).svg" alt="">
-                            </div>
-                            <h5 class="fw-bold mt-3">Thử thách & Giải thưởng</h5>
-                            <p>Nhận chứng chỉ khi hoàn thành khóa học.</p>
-                        </div>
-                    </div>
-
-                    <!-- Item 6 -->
-                    <div class="col-lg-4 col-md-6">
-                        <div class="feature-card">
-                            <div class="icon-box">
-                                <img src="./icde1/SVG (2).svg" alt="">
-                            </div>
-                            <h5 class="fw-bold mt-3">Tài liệu phong phú</h5>
-                            <p>Thư viện tài liệu đầy đủ HTML, CSS, Tailwind và nhiều hơn nữa.</p>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-        </section>
-        <div class="hero-banner d-flex align-items-center">
-            <div class="container">
-                <div class="row align-items-center">
-
-                    <!-- LEFT TEXT -->
-                    <div class="col-lg-6">
-                        <h1 class="hero-title">Sẵn sàng bắt đầu hành trình<br>của bạn?</h1>
-
-                        <p class="hero-desc">
-                            Tham gia cùng hàng nghìn sinh viên đã cải thiện kỹ năng của họ. Bắt đầu học ngay hôm nay
-                            với bản dùng thử miễn phí 7 ngày.
-                        </p>
-
-                        <div class="d-flex gap-3 mb-3">
-                            <button class="btn btn-light btn-start">
-                                Dùng thử miễn phí
-                                <span>→</span>
-                            </button>
-
-                            <button class="btn btn-outline-light btn-more">
-                                Tìm hiểu thêm
-                            </button>
-                        </div>
-
-                        <p class="credit-note">
-                            <i class="bi bi-check-circle"></i> Không cần thẻ tín dụng · Hủy bất cứ lúc nào
-                        </p>
-                    </div>
-
-                    <!-- RIGHT IMAGE -->
-                    <div class="col-lg-6 text-center">
-                        <img src="./icde1/Overlay+Shadow (1).svg" class="hero-image" alt="">
-                    </div>
-
-                </div>
-            </div>
-        </div>
-
-        <footer class="footer">
-            <div class="footer-container">
-
-                <!-- Cột 1 -->
-                <div class="footer-col">
-                    <div class="logo-box">
-                        <div class="logo">F</div>
-                        <h3>FigmaPractice</h3>
-                    </div>
-                    <p class="desc">
-                        Nền tảng học tập hàng đầu cho sinh viên luyện tập cắt giao diện Figma.
-                    </p>
-                </div>
-
-                <!-- Cột 2 -->
-                <div class="footer-col">
-                    <h4>Sản phẩm</h4>
-                    <ul>
-                        <li>Tính năng</li>
-                        <li>Giá cả</li>
-                        <li>Bài tập</li>
-                        <li>Cộng đồng</li>
-                    </ul>
-                </div>
-
-                <!-- Cột 3 -->
-                <div class="footer-col">
-                    <h4>Công ty</h4>
-                    <ul>
-                        <li>Giới thiệu</li>
-                        <li>Blog</li>
-                        <li>Tuyển dụng</li>
-                        <li>Liên hệ</li>
-                    </ul>
-                </div>
-
-                <!-- Cột 4 -->
-                <div class="footer-col">
-                    <h4>Theo dõi chúng tôi</h4>
-                    <div class="social">
-                        <i class="fa-brands fa-facebook"></i>
-                        <i class="fa-brands fa-twitter"></i> 
-                        <i class="fa-brands fa-instagram"></i>
-                        <i class="fa-brands fa-youtube"></i>
-                    </div>
-                </div>
-
-            </div>
-
-            <div class="footer-bottom">
-                <p>© 2025 FigmaPractice. Tất cả quyền được bảo lưu.</p>
-                <div class="links">
-                    <a href="#">Chính sách bảo mật</a>
-                    <a href="#">Điều khoản sử dụng</a>
-                </div>
-            </div>
-        </footer>
-
-    </body>
-
+</body>
 </html>
